--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -19,6 +19,10 @@
   </div>
 
   <div class="group">
+    <%= f.input :image, as: :file %>
+  </div>
+
+  <div class="group">
     <%= f.submit "Submit", data: { disable_with: "Submiting..."} %>
   </div>
 
