--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -41,7 +41,7 @@
 
     <div class="total clearfix">
       <span class="pull-right">
-        <span>總計 $ xxx </span>
+        <span>總計 $ <%= render_cart_total_price(current_cart) %> </span>
       </span>
     </div>
 
