--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,7 +19,7 @@
           <% end %>
         </li>
         <% if !current_user %>
-          <li><%= link_to("註冊", new_user_registration_path) %></li>
+          <li><%= link_to(content_tag(:i, '註冊', class: 'fa fa-user-plus'), new_user_registration_path) %></li>
           <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
         <% else %>
           <li class="dropdown">
