--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,3 +24,14 @@
     </div>
   </div>
 </div>
+
+特價下殺僅剩 <div id="getting-started"></div>
+
+<script type="text/javascript">
+  $('#getting-started')
+  .countdown("<%= Time.zone.now + 10.days %>", function(event) {
+    $(this).text(
+      event.strftime('%D days %H:%M:%S')
+    );
+  });
+</script>
