--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="container" style="margin-top: 100px;">
-  <p class="text-center">Copyright &copy;2017 JD1
+  <p class="text-center">Copyright &copy;2017 Choco
     <br>Design by ciou
   </p>
 </footer>
