--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">jd1</a>
+      <a href="/" class="navbar-brand">Choco</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
