--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">Choco</a>
+      <%= link_to("Choco", products_path, class: "navbar-brand") %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <!-- <ul class="nav navbar-nav">
         <li class="active">
           <%= link_to("Products", products_path) %>
         </li>
-      </ul>
+      </ul> -->
       <ul class="nav navbar-nav navbar-right">
         <li>
           <%= link_to carts_path do %>
