--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,37 @@
-<div class="row">
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag("index1.jpeg", height: '900', width: '900') %>
+      <div class="carousel-caption"></div>
+     </a>
+    </div>
+    <div class="item">
+       <%= image_tag("index2.jpeg", height: '900', width: '900') %>
+      <div class="carousel-caption"></div>
+     </a>
+    </div>
+    <div class="item">
+        <%= image_tag("index3.jpeg", height: '900', width: '900') %>
+        <div class="carousel-caption"></div>
+      </a>
+    </div>
+  </div>
+
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev" style="background: transparent;">
+   <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next" style="background: transparent;">
+   <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+<div class="row" style="margin-top: 40px;">
   <% @products.each do |product| %>
     <div class="col-xs-6 col-md-3">
       <%= link_to product_path(product) do %>
