--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,19 +6,22 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
   </head>
   <body>
     <div class="container">
       <%= render "common/navbar" %>
       <%= render "common/flashes" %>
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2" style="margin-top: 50px;">
           <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
             <li><%= link_to("Products", admin_products_path, class: "active") %></li>
             <li><%= link_to("Orders", admin_orders_path) %></li>
           </ul>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10" style="margin-top: 50px;">
           <%= yield %>
         </div>
       </div>
