--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
     <%= render "common/navbar" %>
 
-    <div class="container">
+    <div class="container" style="margin-top: 50px;">
       <%= render "common/flashes" %>
       <%= yield %>
     </div>
