--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,17 +7,23 @@
   <div class="carousel-inner">
     <div class="item active">
       <%= image_tag("index1.jpeg", height: '900', width: '900') %>
-      <div class="carousel-caption"></div>
+      <div class="carousel-caption" id="start-buy">
+        <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
+      </div>
      </a>
     </div>
     <div class="item">
        <%= image_tag("index2.jpeg", height: '900', width: '900') %>
-      <div class="carousel-caption"></div>
+       <div class="carousel-caption" id="start-buy">
+         <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
+       </div>
      </a>
     </div>
     <div class="item">
         <%= image_tag("index3.jpeg", height: '900', width: '900') %>
-        <div class="carousel-caption"></div>
+        <div class="carousel-caption" id="start-buy">
+          <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
+        </div>
       </a>
     </div>
   </div>
@@ -31,7 +37,7 @@
 </div>
 
 
-<div class="row" style="margin-top: 40px;">
+<!-- <div class="row" style="margin-top: 40px;">
   <% @products.each do |product| %>
     <div class="col-xs-6 col-md-3">
       <%= link_to product_path(product) do %>
@@ -44,4 +50,44 @@
       <%= product.title %> $ <%= product.price %>
     </div>
   <% end %>
+</div> -->
+<div style="margin-top: 30px;">
+<% @products.each do |product| %>
+
+  <div class="col-sm-3">
+
+      <article class="col-item" style="margin-bottom: 40px;border-radius: 10px;">
+      	<div class="photo">
+  			<div class="options-cart-round">
+  				<button class="btn btn-default" title="Add to cart">
+  					<!-- <span class="fa fa-shopping-cart"></span> -->
+            <%= link_to add_to_cart_product_path(product), method: :post do  %>
+              <span class="fa fa-shopping-cart"> </span>
+            <% end %>
+  				</button>
+  			</div>
+
+        <%= link_to product_path(product) do %>
+          <% if product.image.present? %>
+            <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+          <% else %>
+            <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail", class: " img-responsive center-block") %>
+          <% end %>
+        <% end %>
+
+  		</div>
+  		<div class="info">
+  			<div class="row">
+  				<div class="price-details col-md-6">
+  					<p class="details">
+  						<%= product.description %>
+  					</p>
+  					<h1><%= product.title %></h1>
+  					<span class="price-new">$ <%= product.price %></span>
+  				</div>
+  			</div>
+  		</div>
+  	</article>
+  </div>
+<% end %>
 </div>
