--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,8 @@
+<style>
+div{
+  color: rgba(256,256,256,.9)
+}
+</style>
 <div class="row">
   <div class="col-md-6">
     <% if @product.image.present? %>
@@ -6,26 +11,50 @@
       <%= image_tag("http://placehold.it/400x400&text=No Pic", class: "thumbnail") %>
     <% end %>
   </div>
-  <div class="col-md-6">
-    <h2><%= @product.title %></h2>
-    <div style="height:100px">
-      <p>
-        <%= @product.description %>
-      </p>
-    </div>
-    <div> 數量： <%= @product.quantity %></div>
-    <div class="product-price"> $ <%= @product.price %></div>
-    <div class="pull-right">
+
+  <div class="details col-md-6">
+		<h3 class="product-title"><%= @product.title %></h3><br><br>
+		<!-- <div class="rating">
+			<div class="stars">
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star checked"></span>
+				<span class="fa fa-star"></span>
+				<span class="fa fa-star"></span>
+			</div>
+			<span class="review-no">41 reviews</span>
+		</div> -->
+		<p class="product-description"><%= @product.description %></p>
+		<h4 class="price">current price: <span>$ <%= @product.price %></span></h4>
+		<!-- <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p> -->
+		<!-- <h5 class="sizes">sizes:
+			<span class="size" data-toggle="tooltip" title="small">s</span>
+			<span class="size" data-toggle="tooltip" title="medium">m</span>
+			<span class="size" data-toggle="tooltip" title="large">l</span>
+			<span class="size" data-toggle="tooltip" title="xtra large">xl</span>
+		</h5>
+		<h5 class="colors">colors:
+			<span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
+			<span class="color green"></span>
+			<span class="color blue"></span>
+		</h5> -->
+		<div class="action" style="margin-top: 100px;">
       <% if @product.quantity.present? && @product.quantity > 0 %>
-        <%= link_to("加入購物車", add_to_cart_product_path(@product), method: :post, class: "btn btn-primary btn-danger btn-lg") %>
+        <%= link_to add_to_cart_product_path(@product), method: :post, class: "btn btn-primary btn-danger btn-lg" do %>
+        購物車 <i class="fa fa-shopping-cart"> </i>
+        <% end %>
       <% else %>
         已銷售一空，無法購買
       <% end %>
-    </div>
-  </div>
-</div>
 
+			<button class="like btn btn-default" type="button" style="margin-left:30px;"><span class="fa fa-heart"></span></button>
+		</div>
+	</div>
+
+
+<div style="position: absolute;bottom: 60px;margin: auto;background-color: #FA0964;padding:10px 20px;">
 特價下殺僅剩 <div id="getting-started"></div>
+</div>
 
 <script type="text/javascript">
   $('#getting-started')
