style layout/admin

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,3 +1,8 @@
+<style>
+  div{
+    color: grey;
+  }
+</style>
 <div class="row">
   <div class="col-md-12">
 
@@ -54,7 +59,7 @@
           <div id="payment-form"></div><br>
           <%= f.submit "確認付款", class: "btn btn-default btn-danger" %>
         <% end %>
-        
+
       </div>
     <% else %>
       <p class="text-center">此訂單已完成付款</p>
