--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,3 +1,8 @@
+<style>
+  div{
+    color: grey;
+  }
+</style>
 <h2>Products List</h2>
 <div class="pull-right" style="padding-bottom: 20px;">
   <%= link_to("新增產品", new_admin_product_path, class: "btn btn-primary btn-lg") %>
@@ -28,9 +33,9 @@
         <td><%= product.title %></td>
         <td><%= product.price %></td>
         <td>
-          <%= link_to("Edit", edit_admin_product_path(product)) %>
-          <%= link_to "向上", move_up_admin_product_path(product), method: :patch %>
-          <%= link_to "向下", move_down_admin_product_path(product), method: :patch %>
+          <%= link_to("Edit", edit_admin_product_path(product), class: "btn btn-primary btn-sm") %>
+          <%= link_to "向上", move_up_admin_product_path(product), class: "btn btn-info btn-sm", method: :patch %>
+          <%= link_to "向下", move_down_admin_product_path(product), class: "btn btn-info btn-sm", method: :patch %>
         </td>
       </tr>
     <% end %>
