--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,14 +8,18 @@
     <%= csrf_meta_tags %>
     <!--google font-->
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+    <style>
+      div{
+        color: grey;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <%= render "common/navbar" %>
       <%= render "common/flashes" %>
       <div class="row">
-        <div class="col-md-2" style="margin-top: 50px;">
+        <div class="col-md-2" style="margin-top: 100px;">
           <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
             <li><%= link_to("Products", admin_products_path, class: "active") %></li>
             <li><%= link_to("Orders", admin_orders_path) %></li>
