--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag("index1.jpeg", height: '900', width: '900') %>
+      <%= image_tag("index1.jpg", height: '900', width: '900') %>
       <div class="carousel-caption" id="start-buy">
         <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
       </div>
