--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,14 +13,14 @@
      </a>
     </div>
     <div class="item">
-       <%= image_tag("index2.jpeg", height: '900', width: '900') %>
+       <%= image_tag("index2.jpg", height: '900', width: '900') %>
        <div class="carousel-caption" id="start-buy">
          <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
        </div>
      </a>
     </div>
     <div class="item">
-        <%= image_tag("index3.jpeg", height: '900', width: '900') %>
+        <%= image_tag("index3.jpg", height: '900', width: '900') %>
         <div class="carousel-caption" id="start-buy">
           <button type="button" class="btn btn-danger btn-lg" style="margin-bottom: 40px;">開始選購</button>
         </div>
