--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -4,6 +4,18 @@
       <%= link_to("Choco", products_path, class: "navbar-brand") %>
     </div>
 
+    <ul class="nav navbar-nav navbar-left">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-e panded="false">分類<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+             <% Category.all.each do |category| %>
+               <li>
+                <%= link_to(category.name, products_path(category: category.name)) %>
+              </li>
+            <% end %>
+           </ul>
+          </li>
+       </ul>
     <!-- Collect the nav links, forms, and other content for toggling -->
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
